--- a/.gitattributes
+++ b/.gitattributes
@@ -1,35 +1,1 @@
-# Force all text to use UNIX-style eof.
-*.cpp text eol=lf
-*.css text eol=lf
-*.html text eol=lf
-*.in text eol=lf
-*.jison text eol=lf
-*.js text eol=lf
-*.json text eol=lf
-*.lang text eol=lf
-*.map text eol=lf
-*.md text eol=lf
-*.php text eol=lf
-*.phps text eol=lf
-*.py text eol=lf
-*.rewrites text eol=lf
-*.sbt text eol=lf
-*.scala text eol=lf
-*.service text eol=lf
-*.sh text eol=lf
-*.sql text eol=lf
-*.text text eol=lf
-*.tpl text eol=lf
-*.txt text eol=lf
-*.xml text eol=lf
-*.yml text eol=lf
-
-# Auto-generated files
-/yarn.lock linguist-generated=true
-/frontend/server/src/Controllers/README.md linguist-generated=true
-/frontend/server/src/DAO/Base/*.php linguist-generated=true
-/frontend/server/src/DAO/VO/*.php linguist-generated=true
-/frontend/templates/pseudo.lang linguist-generated=true
-/frontend/www/js/omegaup/api.ts linguist-generated=true
-/frontend/www/js/omegaup/api_types.ts linguist-generated=true
-/frontend/www/js/omegaup/lang* linguist-generated=true
+*.ipynb linguist-language=Python
